styles/index.css
@charset "UTF-8";

/* RESET */
* {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    box-sizing: border-box;
    text-decoration: none;
    user-select: none;
    appearance: none;
}

/* BODY AREA */
body {
    display: flex;
    justify-content: center;
    align-items: center;

    width: 100%;
    height: 100dvh;

    background: url('../images/ios-wallpaper.jpg') no-repeat fixed center/cover;
}

/* MAIN AREA */
main {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: center;

    width: clamp(330px, 80vw, 900px);
    height: 600px;
    border: 1px solid rgba(255, 255, 255, 0.2);
    border-radius: 12px;

    background-color: transparent;
    backdrop-filter: blur(10px) saturate(160%);
    -webkit-background-filter: blur(10px) saturate(160%);
    filter: drop-shadow(0px 8px 32px rgba(0, 0, 0, 0.2));
}

h1 {
    font-family: "Allura", cursive;
    color: white;
    text-shadow: 0px 3px 5px rgba(0, 0, 0, 0.602);
}

.iphone-frame {
    width: 320px;
    aspect-ratio: 9/17;

    background: url('../images/iphone-frame2.png') no-repeat center/contain;

    position: relative;
}

.iphone-screen {
    width: 72%;
    height: 77.5%;
    border-radius: 10px;

    overflow: hidden;
    position: absolute;
    top: 50.5%;
    left: 50%;

    transform: translate(-50%, -50%);
}

#calculator-app {
    width: 100%;
    height: 100%;
}

